newclay/test/Compiler/Propagation/Fail/RecursivePropagationBoolTypeMismatch/main.clay
foo(x) = if (foo(x)) 1 else 2;

main() {
    return foo(1);
}
